docs/api/qiskit/0.33/dagcircuit.mdx
---
title: dagcircuit (v0.33)
description: API reference for qiskit.dagcircuit in qiskit v0.33
in_page_toc_min_heading_level: 2
python_api_type: module
python_api_name: qiskit.dagcircuit
---

<span id="module-qiskit.dagcircuit" />

<span id="qiskit-dagcircuit" />

<span id="dag-circuits-qiskit-dagcircuit" />

# DAG Circuits

`qiskit.dagcircuit`

## DAG Circuits

|                                                                                                                 |                                                                                                    |
| --------------------------------------------------------------------------------------------------------------- | -------------------------------------------------------------------------------------------------- |
| [`DAGCircuit`](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")()                                   | Quantum circuit as a directed acyclic graph.                                                       |
| [`DAGNode`](qiskit.dagcircuit.DAGNode "qiskit.dagcircuit.DAGNode")(\[type, op, name, qargs, cargs, …])          | Parent class for DAGOpNode, DAGInNode, and DAGOutNode.                                             |
| [`DAGOpNode`](qiskit.dagcircuit.DAGOpNode "qiskit.dagcircuit.DAGOpNode")(op\[, qargs, cargs])                   | Object to represent an Instruction at a node in the DAGCircuit.                                    |
| [`DAGInNode`](qiskit.dagcircuit.DAGInNode "qiskit.dagcircuit.DAGInNode")(wire)                                  | Object to represent an incoming wire node in the DAGCircuit.                                       |
| [`DAGOutNode`](qiskit.dagcircuit.DAGOutNode "qiskit.dagcircuit.DAGOutNode")(wire)                               | Object to represent an outgoing wire node in the DAGCircuit.                                       |
| [`DAGDepNode`](qiskit.dagcircuit.DAGDepNode "qiskit.dagcircuit.DAGDepNode")(\[type, op, name, qargs, cargs, …]) | Object to represent the information at a node in the DAGDependency().                              |
| [`DAGDependency`](qiskit.dagcircuit.DAGDependency "qiskit.dagcircuit.DAGDependency")()                          | Object to represent a quantum circuit as a directed acyclic graph via operation dependencies (i.e. |

## Exceptions

|                                                                                                   |                                                        |
| ------------------------------------------------------------------------------------------------- | ------------------------------------------------------ |
| [`DAGCircuitError`](qiskit.dagcircuit.DAGCircuitError "qiskit.dagcircuit.DAGCircuitError")(\*msg) | Base class for errors raised by the DAGCircuit object. |

